Document add-opens flags for Java 17, #31087 (#31685)